// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionsDropdownOrAction renders with multiple values 1`] = `
<ListItemAction>
  <DropdownMenu
    disabled={false}
    title={
      <ForwardRef(InternalButton)>
        Dude URL
      </ForwardRef(InternalButton)>
    }
  >
    <MenuItem
      key="dude.com/1"
    >
      <ExternalLink
        as="a"
        href="dude.com/1"
      >
        dude.com/1
      </ExternalLink>
    </MenuItem>
    <MenuItem
      key="dude.com/2"
    >
      <ExternalLink
        as="a"
        href="dude.com/2"
      >
        dude.com/2
      </ExternalLink>
    </MenuItem>
  </DropdownMenu>
</ListItemAction>
`;

exports[`ActionsDropdownOrAction renders with single value 1`] = `
<ListItemAction>
  <ExternalLink
    as="a"
    href="dude.com/1"
  >
    Dude URL
  </ExternalLink>
</ListItemAction>
`;
